# PIRA_Codex_ClaudeCode

./: .gitignore  AGENTS.md  README.md  SOUL.md  TOOLS.md  USER.md
PIRA_Voice/Samantha/: complete_msg.m4a  start_msg.m4a  waiting_msg.m4a
WORKLOG/: WORKLOG.md  claude-code-port.md
assets/: AUDIO_CUSTOMIZATION_GUIDE.md  setup_codex_audio_mode.sh  setup_codex_audio_mode_windows.ps1
assets/scripts/: setup_codex_audio_mode.py  setup_codex_audio_mode.sh  setup_codex_audio_mode_windows.ps1  setup_pira.ps1  setup_pira.py  setup_pira.sh  setup_pira_claude.ps1  setup_pira_claude.py  setup_pira_claude.sh  setup_pira_tools.py
assets/scripts/lib/: pira_python_bootstrap.ps1  pira_python_bootstrap.sh
modules/: CODING_STYLE.md  PAPER_READING.md  RESEARCH_POLICY.md  SCIENTIFIC_WRITING.md
tools/: Cargo.toml  select_tool_for_platform.py
tools/src/: capture.rs  cli.rs  events.rs  help.rs  lib.rs  model.rs  python_exec.rs  storage.rs  summarize.rs  transform.rs  util.rs
tools/src/pira_ctx/: capture.rs  cli.rs  events.rs  help.rs  lib.rs  model.rs  python_exec.rs  security.rs  storage.rs  summarize.rs  transform.rs  util.rs
