[package]
name = "pira_ctx"
version = "0.2.0"
edition = "2024"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"

[[bin]]
name = "pira_ctx"
path = "src/bin/pira_ctx.rs"
