[package]
name = "pira_ctx"
version = "0.5.2"
edition = "2024"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"

[[bin]]
name = "pira_ctx"
path = "src/bin/pira_ctx.rs"
