[package]
name = "pira_ctx"
version = "0.7.0"
edition = "2024"
description = "Lightweight command-output capture, synopsis, and retrieval for PIRA agents"
license = "Apache-2.0"
repository = "https://github.com/AlgebraLoveme/PIRA"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"

[lib]
path = "src/pira_ctx/lib.rs"

[[bin]]
name = "pira_ctx"
path = "src/pira_ctx/main.rs"
